Playback Plugin:  Fixed a bug where the extra space that gets added to the bottom of terminals (to make room for the playback bar) could get added twice in certain circumstances. gateone.js:  Removed a reference to the old combined_js URL. gateone.py:  Fixed a bug where parsing API keys given on the command line was not working properly (resulted AttributeError exception). gateone.py:  Added a new command line option:  --cache_dir.  It just lets you override the 'cache_dir' setting (which you'd normally put in 10server.conf) at runtime. gateone.py:  Changed how files are named in the cache_dir inside of ApplicationWebSocket.render_style():  Instead of using the template's path as the filename it will now make a hash of that path and use that instead. gateone.py:  Fixed a bug where some command line options were not being set if they did not have an equvialent default setting in 10server.conf. gateone.py:  Updated the 'embedded' define() to include a useful help string. utils.py:  Modified get_or_cache() in the same way as render_style():  It will now use a hash of the path for the filename. terminal.js:  Added a little conditional to GateOne.Terminal.onResizeEvent() to prevent transient exceptions from showing up in the JS console when it gets called before a terminal has finished being created or was just removed (really only applies when Gate One is embedded into something else). terminal.js:  Added the same sort of conditional to GateOne.Terminal.sendDimensions() to prevent a transient exception. Terminal themes:  Added a conditional that sets the width of terminals to 100% if Gate One is run with --embedded=True (since there probably won't be a toolbar)

--- a/gateone/applications/terminal/templates/themes/black.css
+++ b/gateone/applications/terminal/templates/themes/black.css
@@ -2,10 +2,15 @@
 #{{container}} .terminal {
     line-height: 1;
     height: 100%; /* NOTE: This is important for the getRowsAndColumns() calculation */
+{% if embedded %}
+    width: 100%;
+    right: 0;
+{% else %}
     width: calc(100% - 2em);
     width: -webkit-calc(100% - 2em);
-    position: absolute;
     right: 2em;
+{% end %}
+    position: absolute;
     -webkit-transition-property: -webkit-transform, height, width;
     -webkit-transition-duration: 1s;
     -webkit-transition-timing-function: ease-in-out;
