--- a/gateone/applications/terminal/templates/themes/white.css
+++ b/gateone/applications/terminal/templates/themes/white.css
@@ -3,9 +3,14 @@
     line-height: 1;
     height: 100%; /* NOTE: This is important for the getRowsAndColumns() calculation */
     position: absolute;
+{% if embedded %}
+    width: 100%;
+    right: 0;
+{% else %}
     width: calc(100% - 2em);
     width: -webkit-calc(100% - 2em);
     right: 2em;
+{% end %}
     -webkit-transition-property: -webkit-transform, height, width;
     -webkit-transition-duration: 1s;
     -webkit-transition-timing-function: ease-in-out;
